# prefect-etl

./: README.md  README.rst  pyproject.toml
src/: 01_hello.py  02_trigger_and_retry.py  03_schedule.py  04_map.py  05_threads.py
