[tool.poetry]
name = "prefect-etl"
version = "0.1.0"
description = ""
authors = ["8zca <excref@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
